@@ -22,9 +22,6 @@
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
-          <argLine>
-            --illegal-access=permit
-          </argLine>
           <includes>
             <include>**/*.java</include>
           </includes>
@@ -58,11 +55,11 @@
             </goals>
           </execution>
           <execution>
+            <id>report</id>
+            <phase>test</phase>
             <goals>
               <goal>report</goal>
             </goals>
-            <id>report</id>
-            <phase>test</phase>
           </execution>
         </executions>
         <groupId>org.jacoco</groupId>
